--- a/httputil/Gopkg.toml
+++ b/httputil/Gopkg.toml
@@ -40,3 +40,7 @@
 [[constraint]]
   name = "github.com/stretchr/testify"
   version = "1.2.2"
+
+[[constraint]]
+  name = "go.uber.org/zap"
+  version = "1.9.1"
