--- a/httputil/Gopkg.toml
+++ b/httputil/Gopkg.toml
@@ -44,3 +44,7 @@
 [[constraint]]
   name = "go.uber.org/zap"
   version = "1.9.1"
+
+[[constraint]]
+  name = "gopkg.in/square/go-jose.v2"
+  version = "2.2.2"
